--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Programming Languages - Application and Interpretation by Shriram Krishnamurthi》/一/15 静态地检查程序中的不变量：类型.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Programming Languages - Application and Interpretation by Shriram Krishnamurthi》/一/15 静态地检查程序中的不变量：类型.md
@@ -3619,9 +3619,9 @@ productBarcode = .qrCode("ABCDEFGHIJKLMNOP")
 
 switch productBarcode {
 case .upc(let numberSystem, let manufacturer, let product, let check):
-    print("UPC: \(numberSystem), \(manufacturer), \(product), \(check)")
+    print("UPC: $numberSystem), $manufacturer), $product), $check)")
 case .qrCode(let productCode):
-    print("QR code: \(productCode)")
+    print("QR code: $productCode)")
 }
 ```
 
