--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第1章  引论.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第1章  引论.md
@@ -975,7 +975,7 @@ shapes :: [AnyShape]
 shapes = [MkShape (Circle 5), MkShape (Rectangle 4 6)]
 
 main :: IO ()
-main = mapM_ (\(MkShape s) -> print (area s)) shapes
+main = mapM_ ($MkShape s) -> print (area s)) shapes
 ```
 
 #### 解释：
