--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第六部分 高阶系统/第30章 高阶多态.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第六部分 高阶系统/第30章 高阶多态.md
@@ -335,15 +335,15 @@ $$
 $$
 \begin{align*}
 & \overline{} \\
-& T \longrightarrow T \quad (\text{QR-Refl}) \\[10pt]
+& T \longrightarrow T \quad (\text{QR-Refl}) \$$10pt]
 & \overline{S_1 \longrightarrow T_1 \quad S_2 \longrightarrow T_2} \\
-& S_1 \to S_2 \longrightarrow T_1 \to T_2 \quad (\text{QR-Arrow}) \\[10pt]
+& S_1 \to S_2 \longrightarrow T_1 \to T_2 \quad (\text{QR-Arrow}) \$$10pt]
 & \overline{S_2 \longrightarrow T_2} \\
-& \forall X::K_1.~S_2 \longrightarrow \forall X::K_1.~T_2 \quad (\text{QR-All}) \\[10pt]
+& \forall X::K_1.~S_2 \longrightarrow \forall X::K_1.~T_2 \quad (\text{QR-All}) \$$10pt]
 & \overline{S_2 \longrightarrow T_2} \\
-& \lambda X::K_1.~S_2 \longrightarrow \lambda X::K_1.~T_2 \quad (\text{QR-Abs}) \\[10pt]
+& \lambda X::K_1.~S_2 \longrightarrow \lambda X::K_1.~T_2 \quad (\text{QR-Abs}) \$$10pt]
 & \overline{S_1 \longrightarrow T_1 \quad S_2 \longrightarrow T_2} \\
-& S_1~S_2 \longrightarrow T_1~T_2 \quad (\text{QR-App}) \\[10pt]
+& S_1~S_2 \longrightarrow T_1~T_2 \quad (\text{QR-App}) \$$10pt]
 & \overline{S_{12} \longrightarrow T_{12} \quad S_2 \longrightarrow T_2} \\
 & (\lambda X::K_{11}.~S_{12})~S_2 \longrightarrow [X \mapsto T_2]~T_{12} \quad (\text{QR-AppAbs})
 \end{align*}
