--- a/计算机科学/Programming Language Theory (PLT)/《书》/《类型论简史》/第二章 起源.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《类型论简史》/第二章 起源.md
@@ -281,14 +281,14 @@ $$
 
 #### 不动点问题
 
-不动点问题描述的是如何找到一个表达式 \( M \)，使得 \( M \) 满足方程 \( M = f(M) \)，其中 \( f \) 是一个函数。不动点问题在递归定义中非常重要，比如我们常见的递归函数定义就可以归结为寻找某个函数的不动点。
+不动点问题描述的是如何找到一个表达式$M $，使得$M$满足方程$M = f(M) $，其中$f$是一个函数。不动点问题在递归定义中非常重要，比如我们常见的递归函数定义就可以归结为寻找某个函数的不动点。
 
 #### 定理 2.4: 存在不动点的表达式
 
-**定理**：对于任意的函数 \( f \)，都存在一个表达式 \( M \)，使得 \( M = f(M) \)。
+**定理**：对于任意的函数$f $，都存在一个表达式$M $，使得$M = f(M) $。
 
 **证明**：
-我们可以构造这样一个表达式 \( M \)：
+我们可以构造这样一个表达式$M $：
 $$
 M = (\lambda m.f(m m))(\lambda m.f(m m))
 $$
@@ -296,11 +296,11 @@ $$
 $$
 M = f((\lambda m.f(m m))(\lambda m.f(m m))) = f(M)
 $$
-这个表达式确实满足 \( M = f(M) \)，因此它是 \( f \) 的不动点。
+这个表达式确实满足$M = f(M) $，因此它是$f$的不动点。
 
 #### 不动点组合子
 
-由于这个构造适用于任何函数 \( f \)，我们可以提取出一个通用的不动点组合子（Fixed Point Combinator），通常记作 \( \text{fix} \)：
+由于这个构造适用于任何函数$f $，我们可以提取出一个通用的不动点组合子（Fixed Point Combinator），通常记作$\text{fix} $：
 $$
 \text{fix}(f) = (\lambda m.f(m m))(\lambda m.f(m m))
 $$
@@ -312,22 +312,22 @@ $$
 
 #### Curry 悖论
 
-Curry 悖论的核心是通过不动点组合子可以产生自相矛盾的情况。我们考虑逻辑中一个简单的操作——命题的否定。如果我们有一个函数 \( \text{not} \)，表示命题的否定，那么 \( \text{fix}(\text{not}) \) 就应该是一个表达式 \( M \)，使得 \( M = \text{not}(M) \)。这意味着 \( M \) 等于它自己的否定，这显然是一个矛盾。
+Curry 悖论的核心是通过不动点组合子可以产生自相矛盾的情况。我们考虑逻辑中一个简单的操作——命题的否定。如果我们有一个函数$\text{not} $，表示命题的否定，那么$\text{fix}(\text{not})$就应该是一个表达式$M $，使得$M = \text{not}(M) $。这意味着$M$等于它自己的否定，这显然是一个矛盾。
 
 Curry 悖论说明了在 λ-演算和组合子逻辑中，由于不动点的存在，可能会产生无法避免的自相矛盾。这种矛盾表明，尽管 λ-演算和组合子逻辑是强大的工具，但它们直接用于逻辑基础时会带来问题。
 
 #### 具体例子
 
-1. **常函数** \( Kx(y) = x \) 的不动点：
+1. **常函数**$Kx(y) = x$的不动点：
    $$ \text{fix}(Kx) = Kx(\text{fix}(Kx)) = x $$
    对于常函数，其不动点是唯一且明确的。
 
-2. **恒同函数** \( \lambda x.x \) 的不动点：
+2. **恒同函数**$\lambda x.x$的不动点：
    $$ \text{fix}(\lambda x.x) = (\lambda x.xx)(\lambda x.xx) $$
-   这种情况下，求值会陷入无限循环，即不动点的表达式 \( \Omega = \omega \omega \) 是一个“非停机”的表达式。
+   这种情况下，求值会陷入无限循环，即不动点的表达式$\Omega = \omega \omega$是一个“非停机”的表达式。
 
-3. **命题的否定** \( \text{not} \)：
-   对于命题的否定函数，\( \text{fix}(\text{not}) \) 会导致 \( M = \text{not}(M) \)，从而引出逻辑矛盾。
+3. **命题的否定**$\text{not} $：
+   对于命题的否定函数，$ \text{fix}(\text{not})$会导致$M = \text{not}(M) $，从而引出逻辑矛盾。
 
 ### 总结
 
