--- a/计算机科学/Programming Language Theory (PLT)/《书》/《类型论简史》/第五章 范畴语义.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《类型论简史》/第五章 范畴语义.md
@@ -117,7 +117,7 @@ $$
 
 ### 相等类型
 
-相等类型是类型论中的一种类型，用来表达两个元素相等的命题。例如，给定两个类型相同的元素 \( a, b \)，相等类型 \( a = b \) 表示 \( a \) 和 \( b \) 是相等的。
+相等类型是类型论中的一种类型，用来表达两个元素相等的命题。例如，给定两个类型相同的元素$a, b $，相等类型$a = b$表示$a$和$b$是相等的。
 
 #### 外延类型论与局部积闭范畴
 
@@ -127,7 +127,7 @@ $$
 
 #### 内涵相等类型
 
-相对外延类型论，内涵类型论（intensional type theory）中的相等类型具有更强的表达能力。在内涵类型论中，相等不仅仅是形式上的相同，而是可能需要通过构造来证明。例如，对于自然数 \( n \) 和 \( m \)，可能需要证明 \( n + 0 = m \) 才能断言它们相等。
+相对外延类型论，内涵类型论（intensional type theory）中的相等类型具有更强的表达能力。在内涵类型论中，相等不仅仅是形式上的相同，而是可能需要通过构造来证明。例如，对于自然数$n$和$m $，可能需要证明$n + 0 = m$才能断言它们相等。
 
 内涵相等类型论具有更强的构造性，意味着它能够表达更多关于对象的结构信息。这种类型论在很多现代的类型论应用中，尤其是在同伦类型论（homotopy type theory）中，扮演着重要角色。
 
