--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/亚结构逻辑中仿射逻辑的关系.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/亚结构逻辑中仿射逻辑的关系.md
@@ -141,7 +141,7 @@ Rust 的类型系统通过所有权、借用和生命周期机制实现了对内
 
 正如你提到的，逻辑学中的一些规则，例如“弱化规则（Rule of Weakening）”，通过减少假设条件，往往能得到更强的结论。这与编程语言中通过限制来获得更强的表达力有类似之处。
 
-- **排中律与直觉逻辑**：在直觉逻辑中，排中律（即 \( A \vee \neg A \) 总为真）并不被普遍接受。这种限制使得直觉逻辑能够更加精确地表达构造性的证明，而不依赖于非构造性证明方法。
+- **排中律与直觉逻辑**：在直觉逻辑中，排中律（即$A \vee \neg A$总为真）并不被普遍接受。这种限制使得直觉逻辑能够更加精确地表达构造性的证明，而不依赖于非构造性证明方法。
 
 - **约束与简化**：在编程语言中，通过减少某些灵活性（如去掉不安全的操作或减少隐式类型转换），可以避免多种潜在的问题，并使得程序更加健壮。例如，Haskell 的纯函数特性就是通过禁止副作用，迫使程序员以更加明确的方式编写代码。
 
