--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/指称语义，操作语义，公理语义.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/指称语义，操作语义，公理语义.md
@@ -3,7 +3,7 @@
 **指称语义（Denotational Semantics）**：
 - **概念**：指称语义是通过将程序映射到数学对象（如函数）来定义其含义。这种方法强调程序的数学特性和函数关系，而不是程序的执行过程。
 - **实例**：
-  - 在Haskell中，一个纯函数可以被认为是从输入到输出的映射。比如函数 `f(x) = x + 1` 可以表示为一个数学函数 \( f: \mathbb{N} \rightarrow \mathbb{N} \)，将自然数映射到自然数。
+  - 在Haskell中，一个纯函数可以被认为是从输入到输出的映射。比如函数 `f(x) = x + 1` 可以表示为一个数学函数$f: \mathbb{N} \rightarrow \mathbb{N} $，将自然数映射到自然数。
 - **优点**：易于证明程序属性（如正确性），因为其数学特性。
 - **缺点**：对状态变化和副作用的描述较为困难。
 
