--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/类型理论和程序设计 李未 王飓安.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/类型理论和程序设计 李未 王飓安.md
@@ -1,44 +1,44 @@
 [toc]
 
-这张表格展示了类型系统 \( T_1 \) 到 \( T_8 \) 的类型规则（\( (s_1, s_2) \)-规则）与它们在逻辑中的对应关系。每个类型系统都与一个特定的逻辑层次相关联，下面是对各类型系统及其对应的逻辑的解释：
+这张表格展示了类型系统$T_1$到$T_8$的类型规则（$ (s_1, s_2) $-规则）与它们在逻辑中的对应关系。每个类型系统都与一个特定的逻辑层次相关联，下面是对各类型系统及其对应的逻辑的解释：
 
-1. **\( T_1 \)**: 
-   - **规则**: \( (*,*) \)
+1. **$ T_1 $**: 
+   - **规则**:$(*,*) $
    - **对应的逻辑**: 命题逻辑
    - **解释**: 这是最基本的类型系统，只支持简单的命题逻辑，类型之间的关系比较简单。
 
-2. **\( T_2 \)**:
-   - **规则**: \( (*,*) \), \( (\#,*) \)
+2. **$ T_2 $**:
+   - **规则**:$(*,*) $,$(\#,*) $
    - **对应的逻辑**: 二阶命题逻辑
    - **解释**: 此系统扩展了命题逻辑，允许在更高层次上处理命题，因此被称为二阶命题逻辑。
 
-3. **\( T_3 \)**:
-   - **规则**: \( (*,*) \), \( (*,\#) \)
+3. **$ T_3 $**:
+   - **规则**:$(*,*) $,$(*,\#) $
    - **对应的逻辑**: 谓词逻辑
    - **解释**: 这个系统引入了谓词的概念，支持对命题的具体内容进行操作，代表了谓词逻辑。
 
-4. **\( T_4 \)**:
-   - **规则**: \( (*,*) \), \( (\#,*) \), \( (*,\#) \)
+4. **$ T_4 $**:
+   - **规则**:$(*,*) $,$(\#,*) $,$(*,\#) $
    - **对应的逻辑**: 二阶谓词逻辑
    - **解释**: 这是谓词逻辑的扩展版本，支持二阶逻辑的表达形式，允许对谓词进行更高层次的操作。
 
-5. **\( T_5 \)**:
-   - **规则**: \( (\#,\#) \), \( (\#,\#) \)
+5. **$ T_5 $**:
+   - **规则**:$(\#,\#) $,$(\#,\#) $
    - **对应的逻辑**: 弱高阶命题逻辑
    - **解释**: 该系统开始涉及高阶逻辑，但还未完全扩展到高阶逻辑的全范围，因此称为弱高阶命题逻辑。
 
-6. **\( T_6 \)**:
-   - **规则**: \( (*,*) \), \( (\#,*) \), \( (\#,\#) \)
+6. **$ T_6 $**:
+   - **规则**:$(*,*) $,$(\#,*) $,$(\#,\#) $
    - **对应的逻辑**: 高阶命题逻辑
    - **解释**: 该类型系统完全支持高阶命题逻辑，能够处理复杂的命题关系。
 
-7. **\( T_7 \)**:
-   - **规则**: \( (*,*) \), \( (\#,\#) \), \( (*,\#) \)
+7. **$ T_7 $**:
+   - **规则**:$(*,*) $,$(\#,\#) $,$(*,\#) $
    - **对应的逻辑**: 弱高阶谓词逻辑
    - **解释**: 这是弱高阶命题逻辑在谓词逻辑中的扩展，允许对谓词进行更高阶的操作。
 
-8. **\( T_8 \)**:
-   - **规则**: \( (*,*) \), \( (\#,\#) \), \( (*,\#) \), \( (\#,\#) \)
+8. **$ T_8 $**:
+   - **规则**:$(*,*) $,$(\#,\#) $,$(*,\#) $,$(\#,\#) $
    - **对应的逻辑**: 高阶谓词逻辑
    - **解释**: 这是最复杂的系统，支持高阶谓词逻辑，允许对命题和谓词进行多层次、高复杂度的操作。
 
@@ -52,59 +52,59 @@
 
 对不起，我之前的解释不够详细。让我详细解释每个类型系统的规则是什么，它们对应的逻辑是什么，以及它们如何对应。
 
-### 类型系统 \( T_1 \) - \( T_8 \) 的详细解释
+### 类型系统$T_1$-$T_8$的详细解释
 
-1. **\( T_1 \)**:
-   - **规则**: \( (*, *) \)
-     - **解释**: 在这个规则中，星号 \( * \) 表示的是命题的层次。这个规则表示从命题 \( * \) 到命题 \( * \) 的函数构造。该规则意味着你只能构造命题之间的简单映射。
+1. **$ T_1 $**:
+   - **规则**:$(*, *) $
+     - **解释**: 在这个规则中，星号$*$表示的是命题的层次。这个规则表示从命题$*$到命题$*$的函数构造。该规则意味着你只能构造命题之间的简单映射。
    - **对应的逻辑**: 命题逻辑
      - **如何对应**: 在命题逻辑中，我们处理的是简单的真命题或假命题的组合。这一类型系统只能表示基本的逻辑命题，没有更复杂的层次结构。
 
-2. **\( T_2 \)**:
-   - **规则**: \( (*, *) \), \( (\#, *) \)
-     - **解释**: 这个规则引入了一个新的层次 \( \# \)，表示变量或谓词。规则 \( (\#, *) \) 表示从变量层次 \( \# \) 到命题层次 \( * \) 的映射。该规则允许在逻辑命题中使用变量或谓词。
+2. **$ T_2 $**:
+   - **规则**:$(*, *) $,$(\#, *) $
+     - **解释**: 这个规则引入了一个新的层次$\# $，表示变量或谓词。规则$(\#, *)$表示从变量层次$\#$到命题层次$*$的映射。该规则允许在逻辑命题中使用变量或谓词。
    - **对应的逻辑**: 二阶命题逻辑
-     - **如何对应**: 在二阶命题逻辑中，我们可以量化命题中的谓词，即可以操作谓词而不是仅限于操作单纯的命题。因此，类型系统 \( T_2 \) 引入了允许处理谓词的规则。
+     - **如何对应**: 在二阶命题逻辑中，我们可以量化命题中的谓词，即可以操作谓词而不是仅限于操作单纯的命题。因此，类型系统$T_2$引入了允许处理谓词的规则。
 
-3. **\( T_3 \)**:
-   - **规则**: \( (*, *) \), \( (*, \#) \)
-     - **解释**: 该规则允许从命题层次 \( * \) 映射到变量或谓词层次 \( \# \) 的构造。这意味着可以构造带有参数的谓词，这正是谓词逻辑所需要的。
+3. **$ T_3 $**:
+   - **规则**:$(*, *) $,$(*, \#) $
+     - **解释**: 该规则允许从命题层次$*$映射到变量或谓词层次$\#$的构造。这意味着可以构造带有参数的谓词，这正是谓词逻辑所需要的。
    - **对应的逻辑**: 谓词逻辑
-     - **如何对应**: 在谓词逻辑中，命题可以依赖于变量（或谓词），这种依赖关系在类型系统 \( T_3 \) 中通过 \( (*, \#) \) 规则得到实现。
+     - **如何对应**: 在谓词逻辑中，命题可以依赖于变量（或谓词），这种依赖关系在类型系统$T_3$中通过$(*, \#)$规则得到实现。
 
-4. **\( T_4 \)**:
-   - **规则**: \( (*, *) \), \( (\#, *) \), \( (*, \#) \)
-     - **解释**: 这是 \( T_2 \) 和 \( T_3 \) 的结合，既支持从变量层次到命题层次的映射，也支持从命题层次到变量层次的映射。因此，它能够处理二阶谓词逻辑。
+4. **$ T_4 $**:
+   - **规则**:$(*, *) $,$(\#, *) $,$(*, \#) $
+     - **解释**: 这是$T_2$和$T_3$的结合，既支持从变量层次到命题层次的映射，也支持从命题层次到变量层次的映射。因此，它能够处理二阶谓词逻辑。
    - **对应的逻辑**: 二阶谓词逻辑
-     - **如何对应**: 在二阶谓词逻辑中，既可以对命题中的谓词进行量化，也可以处理命题依赖于谓词的情况，这两者在 \( T_4 \) 中得到了表达。
+     - **如何对应**: 在二阶谓词逻辑中，既可以对命题中的谓词进行量化，也可以处理命题依赖于谓词的情况，这两者在$T_4$中得到了表达。
 
-5. **\( T_5 \)**:
-   - **规则**: \( (\#, \#) \)
-     - **解释**: 该规则引入了从谓词层次 \( \# \) 到谓词层次 \( \# \) 的映射，表示更高阶的操作，但限制在较弱的层次。
+5. **$ T_5 $**:
+   - **规则**:$(\#, \#) $
+     - **解释**: 该规则引入了从谓词层次$\#$到谓词层次$\#$的映射，表示更高阶的操作，但限制在较弱的层次。
    - **对应的逻辑**: 弱高阶命题逻辑
      - **如何对应**: 这种逻辑中允许对谓词本身进行操作，但不允许对这些操作进一步的复杂扩展，因此称为弱高阶命题逻辑。
 
-6. **\( T_6 \)**:
-   - **规则**: \( (*, *) \), \( (\#, *) \), \( (\#, \#) \)
+6. **$ T_6 $**:
+   - **规则**:$(*, *) $,$(\#, *) $,$(\#, \#) $
      - **解释**: 在这个系统中，既支持对命题进行操作，也支持对谓词进行高阶操作，并允许这些高阶操作在层次上进行映射。
    - **对应的逻辑**: 高阶命题逻辑
-     - **如何对应**: 这是完全的高阶逻辑，允许对命题和谓词进行复杂的操作，因此类型系统 \( T_6 \) 能够表达高阶命题逻辑。
+     - **如何对应**: 这是完全的高阶逻辑，允许对命题和谓词进行复杂的操作，因此类型系统$T_6$能够表达高阶命题逻辑。
 
-7. **\( T_7 \)**:
-   - **规则**: \( (*, *) \), \( (\#, \#) \), \( (*, \#) \)
+7. **$ T_7 $**:
+   - **规则**:$(*, *) $,$(\#, \#) $,$(*, \#) $
      - **解释**: 该系统允许从命题到谓词，再从谓词到更高阶的谓词，支持对谓词和命题的高阶操作，但仅限于从命题或谓词构造出的复杂操作。
    - **对应的逻辑**: 弱高阶谓词逻辑
      - **如何对应**: 该系统允许对谓词进行一定的高阶操作，但不支持全范围的高阶构造，因此是“弱”高阶谓词逻辑。
 
-8. **\( T_8 \)**:
-   - **规则**: \( (*, *) \), \( (\#, \#) \), \( (*, \#) \), \( (\#, \#) \)
+8. **$ T_8 $**:
+   - **规则**:$(*, *) $,$(\#, \#) $,$(*, \#) $,$(\#, \#) $
      - **解释**: 这个系统支持最高层次的逻辑表达，允许在命题、谓词以及高阶谓词之间自由映射，是最强的系统。
    - **对应的逻辑**: 高阶谓词逻辑
-     - **如何对应**: 高阶谓词逻辑允许对谓词和命题进行多层次的映射和操作，能够表达最复杂的逻辑关系，这在 \( T_8 \) 中得到了全面支持。
+     - **如何对应**: 高阶谓词逻辑允许对谓词和命题进行多层次的映射和操作，能够表达最复杂的逻辑关系，这在$T_8$中得到了全面支持。
 
 ### 总结
 
-每个类型系统 \( T_1 \) 到 \( T_8 \) 都在表达逻辑系统复杂度的逐步扩展。随着类型规则从简单到复杂，这些类型系统逐渐支持了从命题逻辑到高阶谓词逻辑的各种逻辑形式。这些规则对应于逻辑系统中的量化层次、谓词的使用以及对谓词进行操作的能力，从而实现了不同层次的逻辑表达。
+每个类型系统$T_1$到$T_8$都在表达逻辑系统复杂度的逐步扩展。随着类型规则从简单到复杂，这些类型系统逐渐支持了从命题逻辑到高阶谓词逻辑的各种逻辑形式。这些规则对应于逻辑系统中的量化层次、谓词的使用以及对谓词进行操作的能力，从而实现了不同层次的逻辑表达。
 
 ### ------------------
 
@@ -113,40 +113,40 @@
 ### 符号和括号的基本解释
 
 1. **符号解释**:
-   - \( * \): 这个符号代表基础的类型或命题，例如自然数、布尔值等简单类型。它通常是类型层次的起点。
-   - \( \# \): 这个符号代表谓词或更高阶的类型。例如，一个谓词可以是接受一个自然数作为参数并返回布尔值的函数类型。
+   -$* $: 这个符号代表基础的类型或命题，例如自然数、布尔值等简单类型。它通常是类型层次的起点。
+   -$\# $: 这个符号代表谓词或更高阶的类型。例如，一个谓词可以是接受一个自然数作为参数并返回布尔值的函数类型。
    - **括号**:
-     - 外层括号中的两个元素 \( (s_1, s_2) \) 表示类型从某一层次 \( s_1 \) 到另一层次 \( s_2 \) 的映射关系。
+     - 外层括号中的两个元素$(s_1, s_2)$表示类型从某一层次$s_1$到另一层次$s_2$的映射关系。
      - 在类型规则中，多个这样的映射组合在一起，用来描述系统的复杂性和表达能力。
 
 2. **映射关系**:
-   - \( (*, *) \): 表示从一个基础类型到另一个基础类型的映射。这个对应的是最简单的类型构造，只能在基础类型之间进行转换。
-   - \( (\#, *) \): 表示从谓词层次（或更高阶类型）到基础类型的映射。这意味着我们可以从一个高阶结构返回到基础类型。
-   - \( (*, \#) \): 表示从基础类型到谓词层次的映射。这个允许基础类型参与更高阶的逻辑表达，例如使用类型参数化一个谓词。
-   - \( (\#, \#) \): 表示在谓词层次之间的映射。这是对更高阶结构（如谓词的谓词）的操作，代表更复杂的逻辑系统。
+   -$(*, *) $: 表示从一个基础类型到另一个基础类型的映射。这个对应的是最简单的类型构造，只能在基础类型之间进行转换。
+   -$(\#, *) $: 表示从谓词层次（或更高阶类型）到基础类型的映射。这意味着我们可以从一个高阶结构返回到基础类型。
+   -$(*, \#) $: 表示从基础类型到谓词层次的映射。这个允许基础类型参与更高阶的逻辑表达，例如使用类型参数化一个谓词。
+   -$(\#, \#) $: 表示在谓词层次之间的映射。这是对更高阶结构（如谓词的谓词）的操作，代表更复杂的逻辑系统。
 
 ### 为什么括号数量不一样？
 
 每个规则的括号数量不同，反映了系统允许的映射复杂度和层次的增加。例如：
 
-- **\( (*, *) \)**: 这是最简单的系统，只有基础类型之间的映射。因此，只有一对括号。
-- **\( (*, *), (\#, *) \)**: 这里，我们不仅有基础类型之间的映射，还增加了从谓词到基础类型的映射。这引入了一个额外的层次。
-- **\( (*, *), (\#, *), (*, \#) \)**: 这个系统不仅包含前面的映射，还允许基础类型向上扩展到谓词层次。因此，括号的数量增加到三个。
-- **\( (*, *), (\#, *), (*, \#), (\#, \#) \)**: 这个系统允许最高级别的复杂映射，包括从基础类型到高阶类型之间的所有可能映射，因此括号的数量最多。
+- **$ (*, *) $**: 这是最简单的系统，只有基础类型之间的映射。因此，只有一对括号。
+- **$ (*, *), (\#, *) $**: 这里，我们不仅有基础类型之间的映射，还增加了从谓词到基础类型的映射。这引入了一个额外的层次。
+- **$ (*, *), (\#, *), (*, \#) $**: 这个系统不仅包含前面的映射，还允许基础类型向上扩展到谓词层次。因此，括号的数量增加到三个。
+- **$ (*, *), (\#, *), (*, \#), (\#, \#) $**: 这个系统允许最高级别的复杂映射，包括从基础类型到高阶类型之间的所有可能映射，因此括号的数量最多。
 
 ### 示例说明
 
-假设你有一个最简单的命题逻辑系统 \( T_1 \)：
+假设你有一个最简单的命题逻辑系统$T_1 $：
 
-- **\( (*, *) \)** 表示你只能在命题之间做映射，比如在 \( * \) 类型表示命题，而命题与命题之间的映射就是你可以操作的全部内容。
+- **$ (*, *) $** 表示你只能在命题之间做映射，比如在$*$类型表示命题，而命题与命题之间的映射就是你可以操作的全部内容。
 
-假设你有一个复杂一些的系统 \( T_3 \)：
+假设你有一个复杂一些的系统$T_3 $：
 
-- **\( (*, *) \), \( (*, \#) \)** 现在不仅可以在命题之间映射，还可以从命题映射到更高阶的谓词上。这种系统允许你定义如“关于某个命题的性质”的结构，而这些性质本身就是谓词。
+- **$ (*, *) $,$(*, \#) $** 现在不仅可以在命题之间映射，还可以从命题映射到更高阶的谓词上。这种系统允许你定义如“关于某个命题的性质”的结构，而这些性质本身就是谓词。
 
-再看最复杂的系统 \( T_8 \)：
+再看最复杂的系统$T_8 $：
 
-- **\( (*, *), (\#, *), (*, \#), (\#, \#) \)** 这个系统涵盖了从基础类型到高阶类型的所有可能映射，可以构造和操作非常复杂的逻辑表达式，如高阶谓词或具有参数化性质的高阶结构。
+- **$ (*, *), (\#, *), (*, \#), (\#, \#) $** 这个系统涵盖了从基础类型到高阶类型的所有可能映射，可以构造和操作非常复杂的逻辑表达式，如高阶谓词或具有参数化性质的高阶结构。
 
 ### 进一步理解
 
