--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/编程语言中的特性和语法 Overview/一/1. **控制结构（Control Structures）**.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/编程语言中的特性和语法 Overview/一/1. **控制结构（Control Structures）**.md
@@ -3677,9 +3677,9 @@ head (vcons x xs) = x
      let result: Result<Int, Error> = .success(42)
      switch result {
      case .success(let value):
-         print("Success: \(value)")
+         print("Success: $value)")
      case .failure(let error):
-         print("Error: \(error)")
+         print("Error: $error)")
      }
      ```
 
@@ -4839,12 +4839,12 @@ head (vcons x xs) = x
     let a = 10
     let b = 20
     let max = (a > b) ? a : b
-    print("Max: \(max)") // 输出: Max: 20
+    print("Max: $max)") // 输出: Max: 20
     
     // 嵌套条件表达式
     let c = 30
     let result = (a > b) ? a : ((b > c) ? b : c)
-    print("Result: \(result)") // 输出: Result: 30
+    print("Result: $result)") // 输出: Result: 30
     ```
 
     **解释**：
