--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/行成消去规则.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/行成消去规则.md
@@ -9,40 +9,40 @@
 图中展示了类型形成规则（type-forming rules），这些规则是类型论中的基本构建模块。我们来看每一部分的内容：
 
 ### 类型形成规则（Type Formation）
-这部分展示了如何构造新的类型。比如，如果 \(A\) 和 \(B\) 都是类型，那么 \(A \times B\) 也是一个类型。这个规则用符号表示为：
+这部分展示了如何构造新的类型。比如，如果 $A$ 和 $B$ 都是类型，那么 $A \times B$ 也是一个类型。这个规则用符号表示为：
 $$
 \frac{\Gamma \vdash A : \text{Type} \quad \Gamma \vdash B : \text{Type}}{\Gamma \vdash A \times B : \text{Type}}
 $$
-意思是如果在上下文 \(\Gamma\) 中， \(A\) 和 \(B\) 都是类型，那么 \(A \times B\) 也是一个类型。
+意思是如果在上下文 $\Gamma$ 中， $A$ 和 $B$ 都是类型，那么 $A \times B$ 也是一个类型。
 
 ### 项引入规则（Term Introduction）
-这部分展示了如何引入构造类型的项。例如，为了构造类型 \(A \times B\) 的项，我们需要提供类型 \(A\) 和 \(B\) 的项 \(x\) 和 \(y\) ，并且项 \((x,y)\) 是类型 \(A \times B\) 的项。这个规则用符号表示为：
+这部分展示了如何引入构造类型的项。例如，为了构造类型 $A \times B$ 的项，我们需要提供类型 $A$ 和 $B$ 的项 $x$ 和 $y$ ，并且项 $(x,y)$ 是类型 $A \times B$ 的项。这个规则用符号表示为：
 $$
 \frac{\Gamma \vdash A : \text{Type} \quad \Gamma \vdash B : \text{Type}}{\Gamma, x : A, y : B \vdash \langle x, y \rangle : A \times B}
 $$
-意思是如果在上下文 \(\Gamma\) 中， \(A\) 和 \(B\) 都是类型，并且 \(x\) 和 \(y\) 分别是类型 \(A\) 和 \(B\) 的项，那么 \(\langle x, y \rangle\) 是类型 \(A \times B\) 的项。
+意思是如果在上下文 $\Gamma$ 中， $A$ 和 $B$ 都是类型，并且 $x$ 和 $y$ 分别是类型 $A$ 和 $B$ 的项，那么 $\langle x, y \rangle$ 是类型 $A \times B$ 的项。
 
 ### 项消解规则（Term Elimination）
-这部分展示了如何从复杂类型中提取原始项。例如，从类型 \(A \times B\) 的项中提取出类型 \(A\) 和 \(B\) 的项。这个规则用符号表示为：
+这部分展示了如何从复杂类型中提取原始项。例如，从类型 $A \times B$ 的项中提取出类型 $A$ 和 $B$ 的项。这个规则用符号表示为：
 $$
 \frac{\Gamma \vdash t : A \times B}{\Gamma, t : A \times B \vdash \pi_1(t) : A} \quad \frac{\Gamma \vdash t : A \times B}{\Gamma, t : A \times B \vdash \pi_2(t) : B}
 $$
-意思是如果在上下文 \(\Gamma\) 中， \(t\) 是类型 \(A \times B\) 的项，那么我们可以提取出 \(t\) 的第一个和第二个部分，分别是类型 \(A\) 和 \(B\) 的项。
+意思是如果在上下文 $\Gamma$ 中， $t$ 是类型 $A \times B$ 的项，那么我们可以提取出 $t$ 的第一个和第二个部分，分别是类型 $A$ 和 $B$ 的项。
 
 ### 计算规则（Computation Rule）
 这部分展示了类型和项之间的关系和简化规则。例如，从一对项中提取出各个部分后再重新组合会得到原始的对项。这个规则用符号表示为：
 $$
 (\pi_1 \langle x, y \rangle) = x \quad (\pi_2 \langle x, y \rangle) = y \quad \langle \pi_1(t), \pi_2(t) \rangle = t
 $$
-意思是如果我们有一对项 \( \langle x, y \rangle \)，那么提取出第一部分 \( \pi_1 \) 会得到 \( x \)，提取出第二部分 \( \pi_2 \) 会得到 \( y \)。同样地，如果从项 \( t \) 中提取出第一部分和第二部分再重新组合，会得到 \( t \) 本身。
+意思是如果我们有一对项$\langle x, y \rangle $，那么提取出第一部分$\pi_1$会得到$x $，提取出第二部分$\pi_2$会得到$y $。同样地，如果从项$t$中提取出第一部分和第二部分再重新组合，会得到$t$本身。
 
 ### 例子
-考虑一个例子，我们有两个基本类型 \(A\) 和 \(B\)，在类型论中，我们可以通过这些规则构建更复杂的类型和项：
+考虑一个例子，我们有两个基本类型 $A$ 和 $B$，在类型论中，我们可以通过这些规则构建更复杂的类型和项：
 
-1. **类型形成**：如果 \(A\) 和 \(B\) 是类型，那么 \(A \times B\) 也是类型。
-2. **项引入**：如果 \(x\) 是类型 \(A\) 的项， \(y\) 是类型 \(B\) 的项，那么 \(\langle x, y \rangle\) 是类型 \(A \times B\) 的项。
-3. **项消解**：如果 \(t\) 是类型 \(A \times B\) 的项，我们可以通过 \(\pi_1(t)\) 得到类型 \(A\) 的项，通过 \(\pi_2(t)\) 得到类型 \(B\) 的项。
-4. **计算规则**：如果 \(t = \langle x, y \rangle\)，那么 \(\pi_1(t) = x\)，\(\pi_2(t) = y\)。
+1. **类型形成**：如果 $A$ 和 $B$ 是类型，那么 $A \times B$ 也是类型。
+2. **项引入**：如果 $x$ 是类型 $A$ 的项， $y$ 是类型 $B$ 的项，那么 $\langle x, y \rangle$ 是类型 $A \times B$ 的项。
+3. **项消解**：如果 $t$ 是类型 $A \times B$ 的项，我们可以通过 $\pi_1(t)$ 得到类型 $A$ 的项，通过 $\pi_2(t)$ 得到类型 $B$ 的项。
+4. **计算规则**：如果 $t = \langle x, y \rangle$，那么 $\pi_1(t) = x$，$\pi_2(t) = y$。
 
 这些规则和过程展示了类型论中构建和操作复杂类型和项的方式，通过这套系统化的规则，我们可以严谨地定义和处理程序中的类型和项。
 
