--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/逻辑学、范畴论和类型论中，一阶、二阶和三阶.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/逻辑学、范畴论和类型论中，一阶、二阶和三阶.md
@@ -11,7 +11,7 @@
 
 #### 示例：
 - $$\forall x (P(x) \rightarrow Q(x))$$
-- 解释：对于所有的个体 \(x\)，如果 \(x\) 满足 \(P\)，那么 \(x\) 也满足 \(Q\)。
+- 解释：对于所有的个体 $x$，如果 $x$ 满足 $P$，那么 $x$ 也满足 $Q$。
 
 ### 二阶逻辑（Second-order Logic）
 二阶逻辑扩展了一阶逻辑，允许量词作用于谓词或函数，而不仅仅是个体变量。这使得二阶逻辑能够表达更复杂的性质和关系。
@@ -22,7 +22,7 @@
 
 #### 示例：
 - $$\forall P (\exists x P(x) \rightarrow \exists y P(y) \land Q(y))$$
-- 解释：对于所有的性质 \(P\)，如果存在一个个体 \(x\) 使得 \(P(x)\) 为真，那么存在一个个体 \(y\) 使得 \(P(y)\) 和 \(Q(y)\) 都为真。
+- 解释：对于所有的性质 $P$，如果存在一个个体 $x$ 使得 $P(x)$ 为真，那么存在一个个体 $y$ 使得 $P(y)$ 和 $Q(y)$ 都为真。
 
 ### 三阶逻辑（Third-order Logic）
 三阶逻辑进一步扩展了二阶逻辑，允许量词作用于二阶谓词或函数。这意味着三阶逻辑可以量化关于谓词的谓词，表达更高层次的抽象和复杂性。
@@ -33,7 +33,7 @@
 
 #### 示例：
 - $$\forall Q (\exists P (\forall x Q(P(x))))$$
-- 解释：对于所有的二阶性质 \(Q\)，存在一个性质 \(P\)，使得对于所有个体 \(x\)，\(Q\) 对 \(P(x)\) 成立。
+- 解释：对于所有的二阶性质 $Q$，存在一个性质 $P$，使得对于所有个体 $x$，$Q$ 对 $P(x)$ 成立。
 
 ### 一阶范畴（1-Category）
 一阶范畴（也称为普通范畴）是范畴论中的基本概念。它由对象和对象之间的态射（箭头）组成，并满足一定的组合和单位元性质。
