--- a/计算机科学/Programming Language Theory (PLT)/递归下降/递归下降代码实现.md
+++ b/计算机科学/Programming Language Theory (PLT)/递归下降/递归下降代码实现.md
@@ -1485,7 +1485,7 @@ fun main() {
 
 fun tokenize(expression: String): List<Token> {
     val tokens = mutableListOf<Token>()
-    val regex = Regex("""\s*(\d+\.?\d*|\+|\-|\*|\/|\(|\))\s*""")
+    val regex = Regex("""\s*(\d+\.?\d*|\+|\-|\*|\/|$|$)\s*""")
     regex.findAll(expression).forEach {
         when (val value = it.value.trim()) {
             "+" -> tokens.add(Token.Plus)
@@ -1618,7 +1618,7 @@ fun main() {
 
 fun tokenize(expression: String): List<Token> {
     val tokens = mutableListOf<Token>()
-    val regex = Regex("""\s*(\d+\.?\d*|\+|\-|\*|\/|\(|\))\s*""")
+    val regex = Regex("""\s*(\d+\.?\d*|\+|\-|\*|\/|$|$)\s*""")
     regex.findAll(expression).forEach {
         when (val value = it.value.trim()) {
             "+" -> tokens.add(Token.Plus)
@@ -1745,7 +1745,7 @@ fun main() {
 
 fun tokenize(expression: String): List<Token> {
     val tokens = mutableListOf<Token>()
-    val regex = Regex("""\s*(\d+\.?\d*|\+|\-|\*|\/|\(|\))\s*""")
+    val regex = Regex("""\s*(\d+\.?\d*|\+|\-|\*|\/|$|$)\s*""")
     regex.findAll(expression).forEach {
         when (val value = it.value.trim()) {
             "+" -> tokens.add(Token.Plus)
