--- a/计算机科学/Programming Language Theory (PLT)/🥑Lambda演算/*和□.md
+++ b/计算机科学/Programming Language Theory (PLT)/🥑Lambda演算/*和□.md
@@ -1,10 +1,10 @@
-在lambda立方体中，符号\(\ast\)和\(\Box\)代表不同的类型层次：
+在lambda立方体中，符号$\ast$和$\Box$代表不同的类型层次：
 
-1. **\($\ast$\)**（星号）：通常表示类型的类型，也被称为"kind"。在类型理论中，如果一个项是类型，那么这个类型的类型就是\(\ast\)。例如，如果我们有一个类型`Int`，那么`Int`的类型是\(\ast\)。
+1. **$$\ast$$**（星号）：通常表示类型的类型，也被称为"kind"。在类型理论中，如果一个项是类型，那么这个类型的类型就是$\ast$。例如，如果我们有一个类型`Int`，那么`Int`的类型是$\ast$。
 
-2. **\($\Box$\)**（方框）：代表更高层次的类型或kind的类型。在更复杂的类型系统中，如高阶依赖类型理论，\(\Box\)用于表示kind的kind。这种类型层次的存在允许类型系统具有更高的表达能力和灵活性，例如，能够定义并操作类型的类型的运算。
+2. **$$\Box$$**（方框）：代表更高层次的类型或kind的类型。在更复杂的类型系统中，如高阶依赖类型理论，$\Box$用于表示kind的kind。这种类型层次的存在允许类型系统具有更高的表达能力和灵活性，例如，能够定义并操作类型的类型的运算。
 
-总的来说，\(\ast\)和\(\Box\)在lambda立方体中用来区分不同的类型层级，从而支持复杂的类型操作和高阶类型理论。
+总的来说，$\ast$和$\Box$在lambda立方体中用来区分不同的类型层级，从而支持复杂的类型操作和高阶类型理论。
 
 在类型论中，`*` 和 `□` 表示不同的类型级别，通常用来区分普通类型和类型的类型，或者称为类型构造器。下面将具体解释每一个符号代表的含义和应用：
 
