--- a/计算机科学/Programming Language Theory (PLT)/🥑Lambda演算/变换规则.md
+++ b/计算机科学/Programming Language Theory (PLT)/🥑Lambda演算/变换规则.md
@@ -10,13 +10,13 @@
 $$
 \lambda x. M \rightarrow \lambda y. M[x \mapsto y]
 $$
-其中，\(\lambda x. M\) 表示一个 Lambda 表达式，\(x\) 是绑定变量，\(M\) 是表达式体，\(M[x \mapsto y]\) 表示将 \(M\) 中所有的 \(x\) 替换为 \(y\)。
+其中，$\lambda x. M$ 表示一个 Lambda 表达式，$x$ 是绑定变量，$M$ 是表达式体，$M[x \mapsto y]$ 表示将 $M$ 中所有的 $x$ 替换为 $y$。
 
 #### 例子
 $$
 \lambda x. (x + y) \rightarrow \lambda z. (z + y)
 $$
-这里，变量 \(x\) 被重命名为 \(z\)，但表达式的意义没有改变。
+这里，变量 $x$ 被重命名为 $z$，但表达式的意义没有改变。
 
 ### β规约（Beta Reduction）
 
@@ -26,13 +26,13 @@ $$
 $$
 (\lambda x. M) N \rightarrow M[x \mapsto N]
 $$
-其中，\((\lambda x. M)\) 表示一个 Lambda 表达式，\(x\) 是绑定变量，\(M\) 是表达式体，\(N\) 是应用参数，\(M[x \mapsto N]\) 表示将 \(M\) 中所有的 \(x\) 替换为 \(N\)。
+其中，$(\lambda x. M)$ 表示一个 Lambda 表达式，$x$ 是绑定变量，$M$ 是表达式体，$N$ 是应用参数，$M[x \mapsto N]$ 表示将 $M$ 中所有的 $x$ 替换为 $N$。
 
 #### 例子
 $$
 (\lambda x. (x + 2)) 3 \rightarrow 3 + 2
 $$
-这里，Lambda 表达式 \(\lambda x. (x + 2)\) 应用于 3，通过 β规约，我们将 \(x\) 替换为 3，得到 \(3 + 2\)。
+这里，Lambda 表达式 $\lambda x. (x + 2)$ 应用于 3，通过 β规约，我们将 $x$ 替换为 3，得到 $3 + 2$。
 
 ### η变换（Eta Conversion）
 
@@ -42,22 +42,22 @@ $$
 $$
 \lambda x. (f x) \rightarrow f \quad (\text{if } x \notin \text{FV}(f))
 $$
-其中，\(\text{FV}(f)\) 表示 \(f\) 的自由变量集合。
+其中，$\text{FV}(f)$ 表示 $f$ 的自由变量集合。
 
 #### 例子
 $$
 \lambda x. (f x) \rightarrow f
 $$
-这里，假设 \(x\) 不是 \(f\) 的自由变量。
+这里，假设 $x$ 不是 $f$ 的自由变量。
 
 ### 组合子逻辑中的基本组合子
 
-在组合子逻辑中，基本组合子如 \(S\)、\(K\) 和 \(I\) 用于构造更复杂的表达式。组合子逻辑消除了对变量的依赖，所有操作都通过组合子进行。
+在组合子逻辑中，基本组合子如 $S$、$K$ 和 $I$ 用于构造更复杂的表达式。组合子逻辑消除了对变量的依赖，所有操作都通过组合子进行。
 
 #### 基本组合子的定义
-- \(I\) 组合子：\(\lambda x. x\)
-- \(K\) 组合子：\(\lambda x. \lambda y. x\)
-- \(S\) 组合子：\(\lambda f. \lambda g. \lambda x. ((f x) (g x))\)
+- $I$ 组合子：$\lambda x. x$
+- $K$ 组合子：$\lambda x. \lambda y. x$
+- $S$ 组合子：$\lambda f. \lambda g. \lambda x. ((f x) (g x))$
 
 ### 组合子逻辑与 Lambda 演算的对比
 
@@ -71,13 +71,13 @@ $$
 (\lambda x. (x + 2)) 3 \rightarrow 3 + 2
 $$
 
-在组合子逻辑中，使用 \(S\)、\(K\) 和 \(I\) 组合子来表示和操作这个表达式可能会更复杂，但它提供了一种不依赖变量的表示方法。
+在组合子逻辑中，使用 $S$、$K$ 和 $I$ 组合子来表示和操作这个表达式可能会更复杂，但它提供了一种不依赖变量的表示方法。
 
 ### 组合子逻辑中的变换规则
 
-- \(S\) 组合子的变换：\(((S f) g) x \rightarrow (f x) (g x)\)
-- \(K\) 组合子的变换：\((K x) y \rightarrow x\)
-- \(I\) 组合子的变换：\(I x \rightarrow x\)
+- $S$ 组合子的变换：$((S f) g) x \rightarrow (f x) (g x)$
+- $K$ 组合子的变换：$(K x) y \rightarrow x$
+- $I$ 组合子的变换：$I x \rightarrow x$
 
 ### 结论
 
