《The Formal Semantics of Programming Languages: An Introduction》 by Glynn Winskel

--- a/计算机科学/Programming Language Theory (PLT)/《书》/《The Formal Semantics of Programming Languages An Introduction Glynn Winskel 》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《The Formal Semantics of Programming Languages An Introduction Glynn Winskel 》/目录.md
@@ -132,9 +132,7 @@
 11.4 急切语义的等价性 (Agreement of Eager Semantics) 190  
 11.5 一个惰性语言 (A Lazy Language) 200  
 11.6 惰性操作语义 (Lazy Operational Semantics) 201  
-11.7 惰性指
-
-称语义 (Lazy Denotational Semantics) 203  
+11.7 惰性指称语义 (Lazy Denotational Semantics) 203  
 11.8 惰性语义的等价性 (Agreement of Lazy Semantics) 204  
 11.9 不动点算子 (Fixed-Point Operators) 209  
 11.10 观察与完全抽象性 (Observations and Full Abstraction) 215  
